fix: Resolvendo liberação de cors & jwtfilter